<resources>
    <string name="app_name">DiggieService</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_store">Toko</string>
    <string name="title_service">Service</string>
    <string name="title_history">Riwayat</string>
    <string name="title_account">Akun</string>
</resources>